excluding .factorypath from license checks

--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -127,6 +127,7 @@
             <exclude>.gitignore</exclude>
             <exclude>**/R.java</exclude>
             <exclude>**/*_.java</exclude>
+            <exclude>**/.factorypath</exclude>
           </excludes>
           <strictCheck>true</strictCheck>
         </configuration>
