--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".ExtraInjectedActivity_" />
         <activity android:name=".ApplicationInjectedActivity_" />
         <activity android:name=".prefs.PrefsActivity_" />
+        <activity android:name=".res.ResActivity_" />
+        
 
 	</application>
 
