--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -29,7 +29,7 @@
       <id>pierre-yves.ricau</id>
       <name>Pierre-Yves Ricau</name>
       <email>py.ricau at gmail</email>
-      <url>http://about.me/piwai</url>
+      <url>http://cv.piwai.info</url>
       <roles>
         <role>developer</role>
       </roles>
