--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -74,7 +74,6 @@
     </dependencies>
   </dependencyManagement>
 
-
   <build>
     <pluginManagement>
       <plugins>
@@ -139,7 +138,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>    
+      </plugin>
     </plugins>
     <extensions>
 
@@ -172,13 +171,12 @@
 
   <distributionManagement>
     <repository>
-      <id>release-repo</id>
-      <url>svn:https://androidannotations.googlecode.com/svn/repository/releases</url>
+      <id>excilys-release</id>
+      <url>http://repository.excilys.com/content/repositories/releases</url>
     </repository>
     <snapshotRepository>
-      <id>snapshot-repo</id>
-<!-- 			<url>git:https://maven-snapshots.androidannotations.googlecode.com/</url> -->
-      <url>git:git@github.com/tomjones/my-project.git</url>
+      <id>excilys-snapshot</id>
+      <url>http://repository.excilys.com/content/repositories/snapshots</url>
     </snapshotRepository>
   </distributionManagement>
 
@@ -190,13 +188,9 @@
 
   <repositories>
     <repository>
-      <id>maven2-repository.dev.java.net</id>
-      <name>Java.net Repository for Maven</name>
-      <url>http://download.java.net/maven/2/</url>
-    </repository>
-    <repository>
-      <id>custom-codemodel-releases</id>
-      <url>http://maven-releases.androidannotations.googlecode.com/git</url>
+      <!-- Needed for CodeModel frozen version -->
+      <id>excilys-thirdparty</id>
+      <url>http://repository.excilys.com/content/repositories/thirdparty</url>
     </repository>
   </repositories>
 
