--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -60,7 +60,7 @@
       <dependency>
         <groupId>com.sun.codemodel</groupId>
         <artifactId>codemodel</artifactId>
-        <version>2.5-FROZEN-AA</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
@@ -170,13 +170,5 @@
     <developerConnection>scm:git:https://py.ricau@code.google.com/p/androidannotations/</developerConnection>
     <url>http://androidannotations.googlecode.com/git</url>
   </scm>
-
-  <repositories>
-    <repository>
-      <!-- Needed for CodeModel frozen version -->
-      <id>excilys-thirdparty</id>
-      <url>http://repository.excilys.com/content/repositories/thirdparty</url>
-    </repository>
-  </repositories>
 
 </project>
