--- a/AndroidAnnotations/functional-test-1-5/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5/pom.xml
@@ -47,7 +47,12 @@
 			<version>1.4</version>
 			<scope>test</scope>
 		</dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.8.1</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -80,4 +85,5 @@
 			</plugin>
 		</plugins>
 	</build>
+  
 </project>
