Adding some RoboGuice functional tests, based on Robolectric testsé

--- a/AndroidAnnotations/functional-test-1-5/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5/pom.xml
@@ -35,6 +35,11 @@
 			<version>1.5_r4</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+          <groupId>org.roboguice</groupId>
+          <artifactId>roboguice</artifactId>
+          <version>	1.1.2</version>
+        </dependency>    
 		<dependency>
 			<groupId>com.pivotallabs</groupId>
 			<artifactId>robolectric</artifactId>
