--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -20,7 +20,7 @@
 	package="com.googlecode.androidannotations.test15" android:versionCode="1"
 	android:versionName="2.1-SNAPSHOT">
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".CustomApplication">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".roboguice.SampleRoboApplication">
 
 		<activity android:name=".EmptyActivityWithLayout_" />
 		<activity android:name=".EmptyActivityWithoutLayout_" />
@@ -30,10 +30,10 @@
         <activity android:name=".ExtraInjectedActivity_" />
         <activity android:name=".BackpressedActivity_" />
         <activity android:name=".TransactionalActivity_" />
+        <activity android:name=".roboguice.ActivityWithRoboGuice_" />        
         <activity android:name=".ApplicationInjectedActivity_" />
         <activity android:name=".prefs.PrefsActivity_" />
         <activity android:name=".res.ResActivity_" />
-        
 
 	</application>
 
