Adding MapActivity to the test app, to check issue 100.

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ExtraInjectedActivity_" />
         <activity android:name=".BackpressedActivity_" />
         <activity android:name=".TransactionalActivity_" />
+        <activity android:name=".roboguice.MapActivityWithRoboGuice_" />        
         <activity android:name=".roboguice.ActivityWithRoboGuice_" />        
         <activity android:name=".ApplicationInjectedActivity_" />
         <activity android:name=".prefs.PrefsActivity_" />
