--- a/AndroidAnnotations/functional-test-1-5/pom.xml
+++ b/AndroidAnnotations/functional-test-1-5/pom.xml
@@ -32,12 +32,13 @@
       <version>1.5_r4</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>com.google.android.maps</groupId>
-      <artifactId>maps</artifactId>
-      <version>3_r3</version>
-      <scope>provided</scope>
-    </dependency>
+<!-- Commented because Maps is not Open Source -->
+<!--     <dependency> -->
+<!--       <groupId>com.google.android.maps</groupId> -->
+<!--       <artifactId>maps</artifactId> -->
+<!--       <version>3_r3</version> -->
+<!--       <scope>provided</scope> -->
+<!--     </dependency> -->
     <dependency>
       <groupId>com.google.android</groupId>
       <artifactId>android-test</artifactId>
