--- a/AndroidAnnotations/rest-api-test-1-5/pom.xml
+++ b/AndroidAnnotations/rest-api-test-1-5/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>androidannotations-parent</artifactId>
 		<groupId>com.googlecode.androidannotations</groupId>
-		<version>2.1.1</version>
+		<version>2.1.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.googlecode.androidannotations</groupId>
