Generic parameters are now well handled for @Background and friends. Fixed issue 103.

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity android:name=".ApplicationInjectedActivity_" />
         <activity android:name=".prefs.PrefsActivity_" />
         <activity android:name=".res.ResActivity_" />
-        
+        <activity android:name=".ThreadActivity_" />
 
 	</application>
 
