--- a/AndroidAnnotations/androidannotations/pom.xml
+++ b/AndroidAnnotations/androidannotations/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.googlecode.androidannotations</groupId>
 		<artifactId>androidannotations-parent</artifactId>
-		<version>2.1.2-SNAPSHOT</version>
+		<version>2.1.2</version>
 	</parent>
 
 	<groupId>com.googlecode.androidannotations</groupId>
