--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.googlecode.androidannotations</groupId>
   <artifactId>androidannotations-parent</artifactId>
-  <version>2.1.2-SNAPSHOT</version>
+  <version>2.1.2</version>
   <packaging>pom</packaging>
 
   <name>Android Annotations Parent</name>
