No more isFinal attribute, looking at abstract keyword on activity instead. Fixes issue 107

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".ExtraInjectedActivity_" />
         <activity android:name=".BackpressedActivity_" />
         <activity android:name=".TransactionalActivity_" />
-        <activity android:name=".NotFinalActivity_" />        
+        <activity android:name=".AbstractActivity_" />        
         <activity android:name=".roboguice.MapActivityWithRoboGuice_" />        
         <activity android:name=".roboguice.ActivityWithRoboGuice_" />        
         <activity android:name=".ApplicationInjectedActivity_" />
