--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -78,6 +78,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.2.1</version>
+			<configuration>
+				<pushChanges>false</pushChanges>
+				<localCheckout>true</localCheckout>
+			</configuration>        
         </plugin>
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
