--- a/AndroidAnnotations/rest-api-test-1-5/pom.xml
+++ b/AndroidAnnotations/rest-api-test-1-5/pom.xml
@@ -106,6 +106,11 @@
 					</sdk>
 					<deleteConflictingFiles>true</deleteConflictingFiles>
 					<undeployBeforeDeploy>true</undeployBeforeDeploy>
+                        <dex>
+                            <jvmArguments>
+                                <jvmArgument>-Xmx512m</jvmArgument>
+                            </jvmArguments>
+                        </dex>  					
 				</configuration>
 				<extensions>true</extensions>
 			</plugin>
@@ -117,6 +122,15 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>			
+			
 		</plugins>
 	</build>
 
