Support for @OptionsMenu

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".prefs.PrefsActivity_" />
         <activity android:name=".res.ResActivity_" />
         <activity android:name=".ThreadActivity_" />
+        <activity android:name="com.googlecode.androidannotations.test15.menu.OptionsMenuActivity_" />
         
 
 	</application>
