adding an activity

--- a/AndroidAnnotations/rest-api-test-1-5/.settings/org.eclipse.jdt.apt.core.prefs
+++ b/AndroidAnnotations/rest-api-test-1-5/.settings/org.eclipse.jdt.apt.core.prefs
@@ -1,4 +1,4 @@
-#Mon Apr 18 14:26:05 CEST 2011
+#Wed Nov 23 11:01:12 CET 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.apt.aptEnabled=true
 org.eclipse.jdt.apt.genSrcDir=.apt_generated
