--- a/AndroidAnnotations/functional-test-1-5/.settings/org.eclipse.jdt.apt.core.prefs
+++ b/AndroidAnnotations/functional-test-1-5/.settings/org.eclipse.jdt.apt.core.prefs
@@ -1,5 +1,6 @@
-#Mon Apr 18 14:25:10 CEST 2011
+#Fri Nov 25 11:25:35 CET 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.apt.aptEnabled=true
 org.eclipse.jdt.apt.genSrcDir=.apt_generated
+org.eclipse.jdt.apt.processorOptions/trace=true
 org.eclipse.jdt.apt.reconcileEnabled=true
