Fixing gpg issue

--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -131,6 +131,7 @@
 					<configuration>
 						<pushChanges>false</pushChanges>
 						<localCheckout>true</localCheckout>
+						<mavenExecutorId>forked-path</mavenExecutorId>
 					</configuration>
 				</plugin>
 				<plugin>
