--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -26,6 +26,7 @@
 		<activity android:name=".EmptyActivityWithoutLayout_" />
 		<activity android:name=".ViewsInjectedActivity_" />
 		<activity android:name=".ClicksHandledActivity_" />
+		<activity android:name=".ItemClicksHandledActivity_" />
 		<activity android:name=".ActivityWithServices_" />
         <activity android:name=".ExtraInjectedActivity_" />
         <activity android:name=".BackpressedActivity_" />
