Configure AndroidAnnotations for use in IDEA
We modify the actual IPR XML to insert the nodes that are added/modified
when we configure AndroidAnnotations in IDEA manually.

Note that in the "processModule" node, the name should match the module
name of the project you want to provide annotation processing to.

Signed-off-by: Ealden Esto E. Escanan <ealden@gmail.com>

--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -63,6 +63,29 @@ idea {
     }
     project {
         languageLevel = compatibilityVersion
+
+        ipr {
+            withXml { provider ->
+                def compilerConfiguration = provider.node.component.find {
+                    it.@name == 'CompilerConfiguration'
+                }
+
+                def annotationProcessing = compilerConfiguration.annotationProcessing[0]
+                annotationProcessing.@enabled = true
+                annotationProcessing.@useClasspath = false
+                annotationProcessing.appendNode('processorPath', [
+                        value: "\$PROJECT_DIR\$/lib/androidannotations-${androidAnnotationsVersion}.jar"
+                ])
+                annotationProcessing.appendNode('processor', [
+                        name: 'com.googlecode.androidannotations.AndroidAnnotationProcessor',
+                        options: ''
+                ])
+                annotationProcessing.appendNode('processModule', [
+                        name: 'gradle',
+                        generatedDirName: 'gen'
+                ])
+            }
+        }
     }
 }
 
