--- a/gradle/AndroidManifest.xml
+++ b/gradle/AndroidManifest.xml
@@ -5,7 +5,7 @@
           android:versionName="1.0.0.SNAPSHOT">
     <application android:icon="@drawable/icon"
                  android:label="@string/app_name">
-        <activity android:name=".activity.HelloAndroidActivity">
+        <activity android:name=".activity.HelloAndroidActivity_">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
