Configuration to process annotations on `gradle assemble`
We override compileJava's doFirst method in order to add AndroidAnnotations
to the compile process.  This allows Gradle to generate the annotations before
compiling the rest of the code.

Unfortunately, the generated code is outputted to build/gen instead of simply
the gen folder.  This means that while the annotated classes are processed
correctly during a `gradle assemble`, they do not show up inside IDEA and must
be rebuilt manually to generate.  It should be possible to point the output
folders of both Gradle and IDEA to the same location, but I haven't really
looked into that yet.

Signed-off-by: Ealden Esto E. Escanan <ealden@gmail.com>

--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -56,6 +56,32 @@ task configureRelease << {
     proguard.enabled = true
 }
 
+compileJava {
+    doFirst {
+        mkdir destinationDir
+        Map otherArgs = [
+                includeAntRuntime: false,
+                destdir: destinationDir,
+                classpath: configurations.compile.asPath,
+                sourcepath: '',
+                target: targetCompatibility,
+                source: sourceCompatibility
+        ]
+        options.compilerArgs = [
+                '-processor', 'com.googlecode.androidannotations.AndroidAnnotationProcessor',
+                '-s', "${destinationDir.absolutePath}".toString(),
+                '-processorpath', "lib/androidannotations-${androidAnnotationsVersion}.jar"
+        ]
+        Map antOptions = otherArgs + options.optionMap()
+        ant.javac(antOptions) {
+            source.addToAntBuilder(ant, 'src', FileCollection.AntType.MatchingTask)
+            options.compilerArgs.each {value ->
+                compilerarg(value: value)
+            }
+        }
+    }
+}
+
 idea {
     module {
         downloadSources = true
