--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -115,6 +115,10 @@ idea {
     }
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.0-milestone-6'
+}
+
 androidProcessResources.dependsOn(clean)
 
 defaultTasks 'assemble'
