Fixing the problem when checking subtypes and there's an ErrorType in the inheritance chain. In those cases, we consider that the developer knows what he's doing

--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".TracedActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.menu.OptionsMenuActivity_" />
         <activity android:name="com.googlecode.androidannotations.test15.NoTitleFullscreenActivity_" />
+        <activity android:name="com.googlecode.androidannotations.test15.ExtendingActivity_" />
     </application>
 
 </manifest>
