--- a/AndroidAnnotations/androidannotations/pom.xml
+++ b/AndroidAnnotations/androidannotations/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.googlecode.androidannotations</groupId>
 		<artifactId>androidannotations-parent</artifactId>
-		<version>2.4</version>
+		<version>2.5-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>androidannotations</artifactId>
